--- a/android/mobile_push.asciidoc
+++ b/android/mobile_push.asciidoc
@@ -339,6 +339,725 @@ In the below example, associated iOS devices will receive only the data within t
 ```
 For any given published message, you may include any combination of pn_* and non-pn_* keys and data.
 
+----
+
+== Payload
+
+The push service piggy backs off a normal pubnub publish.  Therefore the entire payload (including platform push data) will be received by subscribers of that channel.
+
+=== APNS/GCM Format
+
+==== Old Format
+
+* String (automatically converted into APNS payload)
+
+* JSON
+.. Requires platform specific object
+... aps - object containing https://developer.apple.com/library/mac/documentation/NetworkingInternet/Conceptual/RemoteNotificationsPG/Chapters/ApplePushService.html#//apple_ref/doc/uid/TP40008194-CH100-SW1[aps fields]
+ (ex. alert, badge, etc.)
+.. pn_*
+... Top level keys prefixed with "pn_" will not be included in push payload
+
+==== New Format
+
+* JSON
+... pn_apns - object containing https://developer.apple.com/library/mac/documentation/NetworkingInternet/Conceptual/RemoteNotificationsPG/Chapters/ApplePushService.html#//apple_ref/doc/uid/TP40008194-CH100-SW1[aps fields] and user defined data
+... pn_gcm - object containing http://developer.android.com/google/gcm/server.html#params[gcm fields] and user defined data
+... pn_mpns
+... (all data sent to push service must be enapsulated in the platform specific object)
+
+If both 'aps' and 'pn_apns' are specified, consider it a new style payload and only consider 'pn_apns"
+
+=== Params
+
+pn_ttl:: Number of seconds until message expires (don't attempt delivery)
+
+=== MPNS Format
+
+Only toast and tile notifications are supported at this time.  Each type requires a properly formatted payload.
+
+==== Toast
+
+http://msdn.microsoft.com/en-us/library/windows/apps/jj662938(v=vs.105).aspx[Official docs]
+
+===== Payload Parameters
+[options="header", cols="1,1,1,5", width="100%"]
+|====
+
+|Parameter
+|Type
+|Required
+|Description
+
+a|+type+
+|String
+|Required
+|"toast"
+
+a|+delay+
+|Integer
+|Optional
+|When the message will be delivered. Possible values are 0, 450, or 900. 0 is immediate and the others are in seconds. Defaults to 0.
+
+a|+text1+
+|String
+|Optional
+|Text
+
+a|+text2+
+|String
+|Optional
+|Text
+
+a|+param+
+|String
+|Optional
+|Link
+
+|====
+
+.Example
+[source,javascript]
+----
+{
+    "pn_mpns": {
+        "type" : "toast",
+        "text1" : "My title",
+        "text2" : "More text here"
+    }
+}
+----
+
+==== Tile
+
+There are three types of tiles: flip, cycle, iconic.
+
+===== Clearing Values
+
+All tile parameters except type and delay can be cleared by specifying JSON null value.  Normally, the Microsoft Push server will persist the value of a field until the field is set to another value.
+
+.Set flip tile to "hello" and display count of 10
+[source,javascript]
+----
+{
+    "pn_mpns" : {
+        "type" : "flip",
+        "title" : "hello",
+        "count" : 10
+    }
+}
+----
+
+.Next, erase the count.  The "hello" will still be present on the tile of the device (with no count displayed)
+[source,javascript]
+----
+{
+    "pn_mpns" : {
+        "type" : "flip",
+        "count" : null
+    }
+}
+----
+
+Alternative explanation: http://stackoverflow.com/a/20670628/11292
+
+===== Flip
+
+http://msdn.microsoft.com/en-us/library/windows/apps/jj206971(v=vs.105).aspx[Official docs]
+
+===== Payload Parameters
+[options="header", cols="1,1,1,5", width="100%"]
+|====
+
+|Parameter
+|Type
+|Required
+|Description
+
+a|+type+
+|String
+|Required
+|"flip"
+
+a|+delay+
+|Integer
+|Optional
+|When the message will be delivered. Possible values are 0, 450, or 900. 0 is immediate and the others are in seconds. Defaults to 0.
+
+a|+title+
+|String
+|Optional
+|Text
+
+a|+count+
+|Integer
+|Optional
+|Numeric value displayed on tile
+
+a|+small_background_image+
+|String
+|Optional
+|URL
+
+a|+background_image+
+|String
+|Optional
+|URL
+
+a|+back_background_image+
+|String
+|Optional
+|URL
+
+a|+back_content+
+|String
+|Optional
+|Text
+
+a|+back_title+
+|String
+|Optional
+|Text
+
+a|+wide_background_image+
+|String
+|Optional
+|URL
+
+a|+wide_back_background_image+
+|String
+|Optional
+|URL
+
+a|+wide_back_content+
+|String
+|Optional
+|Text
+
+|====
+
+.Example
+[source,javascript]
+----
+{
+    "pn_mpns" : {
+        "type" : "flip",
+        "title" : "Front title",
+        "count" : 1,
+        "back_title" : "Back Tile",
+        "back_content" : "Back message"
+    }
+}
+----
+
+===== Cycle
+
+http://msdn.microsoft.com/en-us/library/windows/apps/jj207036(v=vs.105).aspx[Official docs]
+
+===== Payload Parameters
+[options="header", cols="1,1,1,5", width="100%"]
+|====
+
+|Parameter
+|Type
+|Required
+|Description
+
+a|+type+
+|String
+|Required
+|"cycle"
+
+a|+delay+
+|Integer
+|Optional
+|When the message will be delivered. Possible values are 0, 450, or 900. 0 is immediate and the others are in seconds. Defaults to 0.
+
+a|+title+
+|String
+|Optional
+|Text
+
+a|+count+
+|Integer
+|Optional
+|Numeric value displayed on tile
+
+a|+small_background_image+
+|String
+|Optional
+|URL
+
+a|+images+
+|Array
+|Optional
+|List of URLs
+
+|====
+
+.Example
+[source,javascript]
+----
+{
+    "pn_mpns" : {
+        "type" : "cycle",
+        "title" : "Front title",
+        "images" : [
+            "http://example.com/image.png",
+            "http://example.com/image2.png"
+        ]
+    }
+}
+----
+
+===== Iconic
+
+http://msdn.microsoft.com/en-us/library/windows/apps/jj207009(v=vs.105).aspx[Official docs]
+
+===== Payload Parameters
+[options="header", cols="1,1,1,5", width="100%"]
+|====
+
+|Parameter
+|Type
+|Required
+|Description
+
+a|+type+
+|String
+|Required
+|"iconic"
+
+a|+delay+
+|Integer
+|Optional
+|When the message will be delivered. Possible values are 0, 450, or 900. 0 is immediate and the others are in seconds. Defaults to 0.
+
+a|+title+
+|String
+|Optional
+|Text
+
+a|+count+
+|Integer
+|Optional
+|Numeric value displayed on tile
+
+a|+icon_image+
+|String
+|Optional
+|URL
+
+a|+small_icon_image+
+|String
+|Optional
+|URL
+
+a|+background_color+
+|String
+|Optional
+|Hex ARGB format color (#FFFF0000 is red).
+
+a|+wide_content_1+
+|String
+|Optional
+|Text
+
+a|+wide_content_2+
+|String
+|Optional
+|Text
+
+a|+wide_content_3+
+|String
+|Optional
+|Text
+
+|====
+
+.Example
+[source,javascript]
+----
+{
+    "pn_mpns" : {
+        "type" : "iconic",
+        "title" : "Front title",
+        "count" : 2
+    }
+}
+
+{
+	"pn_mpns":
+	{
+		"type": "iconic",
+		"title": "ico3",
+		"count": 3,
+		"wide_content_1" : "wide content 1 goes here",
+		"wide_content_2" : "wide content 2 goes here",
+		"wide_content_3" : "wide content 3 goes here",
+		"small_icon_image" : "http://cdn.flaticon.com/png/256/16528.png",
+		"icon_image" : "http://cdn.flaticon.com/png/256/16529.png",
+		"background_color" : "#FF00FF00"
+	}
+}
+
+----
+
+== Examples
+
+Recall that the entire contents of the message (including push specific data) will be received by subscribers of the channel.
+
+=== *A. Publishing to APNS with simple string (old format)*
+----
+pubnub.publish("my_channel", "Game update - 49ers touchdown");
+----
+
+iOS device receives:
+----
+{
+    "aps" : {
+        "alert" : "Game update - 49ers touchdown"
+    }
+}
+----
+
+=== *B1. Publishing to APNS with `aps` object*
+----
+pubnub.publish("my_channel", {
+    "aps": {
+        "alert": "Game update 49ers touchdown"
+    }
+});
+----
+
+iOS device receives:
+----
+{
+    "aps" : {
+        "alert" : "Game update - 49ers touchdown"
+    }
+}
+----
+
+=== *B2. Publishing to APNS with `pn_apns` object (new format)*
+----
+pubnub.publish("my_channel", {
+    "pn_apns": {
+        "aps" : {
+            "alert": "Game update 49ers touchdown"
+        }
+    }
+});
+----
+
+iOS device receives:
+----
+{
+    "aps" : {
+        "alert" : "Game update - 49ers touchdown"
+    }
+}
+----
+
+=== *C1. Publishing to APNS with extra user data (old format)*
+
+----
+pubnub.publish("my_channel", {
+    "aps": {
+        "alert": "Game update 49ers touchdown"
+    },
+    "teams" : ["49ers", "raiders"],
+    "score" : [7, 0]
+});
+----
+
+iOS device receives:
+----
+{
+    "aps": {
+        "alert": "Game update 49ers touchdown"
+    },
+    "teams" : ["49ers", "raiders"],
+    "score" : [7, 0]
+}
+----
+
+=== *C2. Publishing to APNS with extra user data (new format)*
+
+----
+pubnub.publish("my_channel", {
+    "pn_apns": {
+        "aps" : {
+            "alert": "Game update 49ers touchdown"
+        },
+        "teams" : ["49ers", "raiders"],
+        "score" : [7, 0]
+    }
+});
+----
+
+iOS device receives:
+----
+{
+    "aps" : {
+        "alert": "Game update 49ers touchdown"
+    },
+    "teams" : ["49ers", "raiders"],
+    "score" : [7, 0]
+}
+----
+
+=== *D1. Publishing only some data to APNS while the rest sent through Pubnub (old format)*
+
+----
+pubnub.publish("my_channel", {
+    "aps": {
+        "alert": "Game update 49ers touchdown"
+    },
+    "teams" : ["49ers", "raiders"],
+    "score" : [7, 0],
+    "pn_other" : {
+        "description" : "A really long description that would be invalid for APNS due to 256 byte max size",
+        "user_list" : [1234, 4239, 3220, 3241, 866]
+    }
+});
+----
+
+iOS device receives:
+----
+{
+    "aps": {
+        "alert": "Game update 49ers touchdown"
+    },
+    "teams" : ["49ers", "raiders"],
+    "score" : [7, 0]
+}
+----
+
+"pn_other" was not included in APNS payload because the key name begins with "pn_".
+
+=== *D2. Publishing only some data to APNS while the rest sent through Pubnub (new format)*
+
+----
+pubnub.publish("my_channel", {
+    "pn_apns" : {
+        "aps": {
+            "alert": "Game update 49ers touchdown"
+        },
+        "teams" : ["49ers", "raiders"],
+        "score" : [7, 0]
+    },
+    "pn_other" : {
+        "description" : "A really long description that would be invalid for APNS due to 256 byte max size",
+        "user_list" : [1234, 4239, 3220, 3241, 866]
+    },
+    "user_bio" : {
+        "name": "John Doe",
+        "age" : 20,
+        "status" : "online"
+    }
+});
+----
+
+iOS device receives:
+----
+{
+    "aps": {
+        "alert": "Game update 49ers touchdown"
+    },
+    "teams" : ["49ers", "raiders"],
+    "score" : [7, 0]
+}
+----
+
+"pn_other"  and "user_bio" was not included in APNS payload because it was outside the "pn_apns" object.
+
+=== *E. Publishing to APNS with extra user data in aps object*
+
+This works even though the behavior is undocumented by Apple.  We won't restrict it, but we won't promote its usage in our docs either.
+
+----
+pubnub.publish("my_channel", {
+    "aps": {
+        "alert": "Game update 49ers touchdown",
+        "badge": 2,
+        "teams" : ["49ers", "raiders"],
+        "score" : [7, 0]
+    }
+});
+----
+
+iOS device receives:
+----
+{
+    "aps": {
+        "alert": "Game update 49ers touchdown",
+        "badge": 2,
+        "teams" : ["49ers", "raiders"],
+        "score" : [7, 0]
+    }
+}
+----
+
+=== *F. Publishing some data to APNS and other data to GCM*
+
+----
+pubnub.publish("my_channel", {
+    "pn_apns": {
+        "aps" : {
+            "alert": "Game update 49ers touchdown",
+            "badge": 2
+        },
+        "teams" : ["49ers", "raiders"],
+        "score" : [7, 0]
+    },
+    "pn_gcm": {
+        "data" : {
+            "summary": "Game update 49ers touchdown",
+            "teams" : ["49ers", "raiders"],
+            "score" : [7, 0],
+            "lastplay" : "5yd run up the middle"
+        }
+    },
+    "full_game" : {
+        "date" : "2014.05.20",
+        "background" : "Data that is not pertinent to devices"
+    },
+    "sequence" : 10
+});
+----
+
+iOS device receives:
+----
+{
+    "aps": {
+        "alert": "Game update 49ers touchdown",
+        "badge": 2,
+    },
+    "teams" : ["49ers", "raiders"],
+    "score" : [7, 0]
+}
+----
+
+Android device receives:
+----
+{
+    "data" : {
+        "summary": "Game update 49ers touchdown",
+        "teams" : ["49ers", "raiders"],
+        "score" : [7, 0],
+        "lastplay" : "5yd run up the middle"
+    }
+}
+----
+
+'full_game' and 'sequence' would not be included in the payload to APNS or GCM.
+
+Pubnub subscribers receive everything:
+----
+{
+    "pn_apns": {
+        "aps" : {
+            "alert": "Game update 49ers touchdown",
+            "badge": 2
+        },
+        "teams" : ["49ers", "raiders"],
+        "score" : [7, 0]
+    },
+    "pn_gcm": {
+        "data" : {
+            "summary": "Game update 49ers touchdown",
+            "teams" : ["49ers", "raiders"],
+            "score" : [7, 0],
+            "lastplay" : "5yd run up the middle"
+        }
+    },
+    "full_game" : {
+        "date" : "2014.05.20",
+        "background" : "Data that is not pertinent to devices"
+    },
+    "sequence" : 10
+}
+----
+
+=== *G. Send toast notification to windows phone
+
+Params - See "Creating a toast notification using a cloud service" section on this page http://msdn.microsoft.com/en-us/library/windows/apps/jj662938(v=vs.105).aspx
+----
+pubnub.publish("my_channel", {
+    "pn_mpns": {
+        "type" : "toast",
+        "text1" : "My title"
+    }
+});
+----
+
+=== *H. Send tile notification to windows phone
+
+Params - See http://msdn.microsoft.com/en-us/library/windows/apps/hh202970(v=vs.105).aspx#BKMK_SendingaTileNotification
+
+----
+pubnub.publish("my_channel", {
+    "pn_mpns" : {
+        "type" : "tile",
+        "title" : "Front title",
+        "count" : 1,
+        "back_title" : "Back Tile",
+        "back_content" : "Back message"
+    }
+});
+----
+
+== Troubleshooting
+
+You can enable more debug logging by included a flag in the publish payload. Any messages will be sent to a side channel.
+
+== GCM Debugging
+
+Use the curl example on https://developers.google.com/cloud-messaging/http#checkAPIkey[GCM docs] to test whether API key and/or registration_id is valid.
+
+----
+curl --header "Authorization: key=<API_KEY>" \
+    --header Content-Type:"application/json" \
+    https://gcm-http.googleapis.com/gcm/send \
+    -d "{\"registration_ids\":[\"ABC\"]}"
+----
+
+This is also a simple way to send a message through GCM.
+
+=== Debug channel
+
+1. Include `"pn_debug" : true` in payload message
+
+----
+    {
+        "aps": {
+            "alert": "Game update 49ers touchdown",
+            "badge": 2,
+        },
+        "pn_debug" : true
+    }
+----
+
+2. Subscribe to <channel>-pndebug for error messages (strings)
+
+Example messages
+----
+"Devices found for ['mpns'] push notification"
+"Invalid APNS notification format"
+"Invalid GCM notification format"
+----
+
+Note: Currently the push server will send warnings even for gateways there were not specified in the push payload.  Will revisit to make debugging less confusing for customers.
+
+=== APIs
+
+* Get list of all registered devices for a subkey and channel.  This API is for internal use only and requires a VPN connection.
++
+----
+curl "http://storageweb2.us-east-1.pubnub.com:9000/admin-push/sub-key/SUBKEY?channel=CHANNEL&type=TYPE"
+----
+
 ===== Pubnub SDK Convenience methods for sending messages via GCM
 
 Pubnub SDK provides convenience methods for sending messages via GCM.
