--- a/android/mobile_push.asciidoc
+++ b/android/mobile_push.asciidoc
@@ -1070,7 +1070,89 @@ curl "http://storageweb2.us-east-1.pubnub.com:9000/admin-push/sub-key/SUBKEY?cha
 
 ====== Javascript
 ```
+a.pubnub = pubnub;
+a.callback = console.log
+a.error = console.log
+a.channel = 'my_channel'
+a.gcm = ['i am gcm array']
+a.apns.alert = "this is alert"
+a.apns.badge = 2
+a.apns.key = "hi am apns"
+a.send()
 
+var b = PNmessage()
+b.pubnub = pubnub;
+b.callback = console.log
+b.error = console.log
+b.channel = 'my_channel'
+b.send()
+
+var c = PNmessage()
+c.pubnub = pubnub;
+c.callback = console.log
+c.error = console.log
+c.channel = 'my_channel'
+c.gcm = ['i am gcm array']
+c.apns.alert = "this is alert"
+c.apns.badge = 2
+c.apns.key = "hi am apns"
+c.mykey = "hi"
+
+```
+
+```
+var pnGcmMessage = pubnub.getGcmMessageObject({"key" : "I am gcm message"});
+var pnApnsMessage = pubnub.getApnsMessageObject({"key" : "I am apns message", "key2" : "I am key 2"});
+
+var pnmessage = pubnub.getPnMessageObject(pnApnsMessage, pnGcmMessage, { "key" : "this is native"});
+var pnmessage1 = pubnub.getPnMessageObject(null, pnGcmMessage, { "key" : "this is native"});
+var pnmessage2 = pubnub.getPnMessageObject(pnApnsMessage, null, { "key" : "this is native"});
+var pnmessage3 = pubnub.getPnMessageObject(pnApnsMessage, pnGcmMessage, null);
+
+
+pubnub.publish({
+    channel : 'abcd',
+    message : pnmessage,
+    callback : function(r) {
+        console.log(r);
+    },
+    'error' : function(r) {
+        console.log(JSON.stringify(r));
+    }
+});
+
+pubnub.publish({
+    channel : 'abcd',
+    message : pnmessage1,
+    callback : function(r) {
+        console.log(r);
+    },
+    'error' : function(r) {
+        console.log(JSON.stringify(r));
+    }
+});
+
+pubnub.publish({
+    channel : 'abcd',
+    message : pnmessage2,
+    callback : function(r) {
+        console.log(r);
+    },
+    'error' : function(r) {
+        console.log(JSON.stringify(r));
+    }
+});
+
+pubnub.publish({
+    channel : 'abcd',
+    message : pnmessage3,
+    callback : function(r) {
+        console.log(r);
+    },
+    'error' : function(r) {
+        console.log(JSON.stringify(r));
+    }
+});
 ```
 
 ====== Java
