--- a/android/mobile_push.asciidoc
+++ b/android/mobile_push.asciidoc
@@ -352,9 +352,9 @@ For any given published message, you may include any combination of pn_* and non
 
 The push service piggy backs off a normal pubnub publish.  Therefore the entire payload (including platform push data) will be received by subscribers of that channel.
 
-====== APNS/GCM Format
+===== APNS/GCM Format
 
-======= Old Format
+====== Old Format
 
 * String (automatically converted into APNS payload)
 
@@ -379,11 +379,11 @@ If both 'aps' and 'pn_apns' are specified, consider it a new style payload and o
 
 pn_ttl:: Number of seconds until message expires (don't attempt delivery)
 
-====== MPNS Format
+===== MPNS Format
 
 Only toast and tile notifications are supported at this time.  Each type requires a properly formatted payload.
 
-======= Toast
+====== Toast
 
 http://msdn.microsoft.com/en-us/library/windows/apps/jj662938(v=vs.105).aspx[Official docs]
 
@@ -435,11 +435,11 @@ a|+param+
 }
 ----
 
-======= Tile
+====== Tile
 
 There are three types of tiles: flip, cycle, iconic.
 
-======= Clearing Values
+====== Clearing Values
 
 All tile parameters except type and delay can be cleared by specifying JSON null value.  Normally, the Microsoft Push server will persist the value of a field until the field is set to another value.
 
@@ -468,7 +468,7 @@ All tile parameters except type and delay can be cleared by specifying JSON null
 
 Alternative explanation: http://stackoverflow.com/a/20670628/11292
 
-===== Flip
+====== Flip
 
 http://msdn.microsoft.com/en-us/library/windows/apps/jj206971(v=vs.105).aspx[Official docs]
 
@@ -557,7 +557,7 @@ a|+wide_back_content+
 }
 ----
 
-===== Cycle
+====== Cycle
 
 http://msdn.microsoft.com/en-us/library/windows/apps/jj207036(v=vs.105).aspx[Official docs]
 
@@ -617,7 +617,7 @@ a|+images+
 }
 ----
 
-===== Iconic
+====== Iconic
 
 http://msdn.microsoft.com/en-us/library/windows/apps/jj207009(v=vs.105).aspx[Official docs]
 
@@ -710,7 +710,7 @@ a|+wide_content_3+
 
 ----
 
-== Examples
+======= Examples
 
 Recall that the entire contents of the message (including push specific data) will be received by subscribers of the channel.
 
@@ -728,7 +728,7 @@ iOS device receives:
 }
 ----
 
-=== *B1. Publishing to APNS with `aps` object*
+====== *B1. Publishing to APNS with `aps` object*
 ----
 pubnub.publish("my_channel", {
     "aps": {
@@ -746,7 +746,7 @@ iOS device receives:
 }
 ----
 
-=== *B2. Publishing to APNS with `pn_apns` object (new format)*
+====== *B2. Publishing to APNS with `pn_apns` object (new format)*
 ----
 pubnub.publish("my_channel", {
     "pn_apns": {
@@ -766,7 +766,7 @@ iOS device receives:
 }
 ----
 
-=== *C1. Publishing to APNS with extra user data (old format)*
+====== *C1. Publishing to APNS with extra user data (old format)*
 
 ----
 pubnub.publish("my_channel", {
@@ -789,7 +789,7 @@ iOS device receives:
 }
 ----
 
-=== *C2. Publishing to APNS with extra user data (new format)*
+====== *C2. Publishing to APNS with extra user data (new format)*
 
 ----
 pubnub.publish("my_channel", {
@@ -879,7 +879,7 @@ iOS device receives:
 
 "pn_other"  and "user_bio" was not included in APNS payload because it was outside the "pn_apns" object.
 
-=== *E. Publishing to APNS with extra user data in aps object*
+====== *E. Publishing to APNS with extra user data in aps object*
 
 This works even though the behavior is undocumented by Apple.  We won't restrict it, but we won't promote its usage in our docs either.
 
@@ -987,7 +987,7 @@ Pubnub subscribers receive everything:
 }
 ----
 
-=== *G. Send toast notification to windows phone
+====== *G. Send toast notification to windows phone
 
 Params - See "Creating a toast notification using a cloud service" section on this page http://msdn.microsoft.com/en-us/library/windows/apps/jj662938(v=vs.105).aspx
 ----
@@ -999,7 +999,7 @@ pubnub.publish("my_channel", {
 });
 ----
 
-=== *H. Send tile notification to windows phone
+====== *H. Send tile notification to windows phone
 
 Params - See http://msdn.microsoft.com/en-us/library/windows/apps/hh202970(v=vs.105).aspx#BKMK_SendingaTileNotification
 
@@ -1015,11 +1015,11 @@ pubnub.publish("my_channel", {
 });
 ----
 
-== Troubleshooting
+===== Troubleshooting
 
 You can enable more debug logging by included a flag in the publish payload. Any messages will be sent to a side channel.
 
-== GCM Debugging
+====== GCM Debugging
 
 Use the curl example on https://developers.google.com/cloud-messaging/http#checkAPIkey[GCM docs] to test whether API key and/or registration_id is valid.
 
@@ -1032,7 +1032,7 @@ curl --header "Authorization: key=<API_KEY>" \
 
 This is also a simple way to send a message through GCM.
 
-=== Debug channel
+====== Debug channel
 
 1. Include `"pn_debug" : true` in payload message
 
@@ -1057,7 +1057,7 @@ Example messages
 
 Note: Currently the push server will send warnings even for gateways there were not specified in the push payload.  Will revisit to make debugging less confusing for customers.
 
-=== APIs
+====== APIs
 
 * Get list of all registered devices for a subkey and channel.  This API is for internal use only and requires a VPN connection.
 +
